moved Signup headline 30px lower

--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,5 +1,5 @@
 <div ng-include src="'/views/navBar.html'"></div>
-<div class="container-fluid text-center">
+<div class="container-fluid text-center" style="padding:30px;">
    <h1 ng-if="user.type == 'create'">Signup</h1>
    <h1 ng-if="user.type == 'edit'">Edit User</h1>
  </div>
